--- a/XProject/wwwroot/css/site.css
+++ b/XProject/wwwroot/css/site.css
@@ -1,5 +1,9 @@
 ﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
 for details on configuring this project to bundle and minify static web assets. */
+body{
+    direction:rtl;
+}
+
 
 a.navbar-brand {
   white-space: normal;
@@ -69,3 +73,47 @@ body {
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
 }
+
+
+
+
+/*
+     Our Style
+
+*/
+
+.box {
+    margin-bottom:20px;
+    width: 100%;
+    min-height: 120px;
+    height:auto;
+    padding:15px;
+    border: 1px solid #e5e5e5;
+    background: #fff;
+    border-radius: 9px;
+    text-align: right;
+    box-shadow: 0 0.25rem 0.75rem rgb(0 0 0 / 5%);
+}
+.box-img{
+    border:1px solid #e5e5e5;
+    height:80px;
+    text-align:center;
+    width:80px;
+    border-radius:9px;
+    overflow:hidden;
+}
+
+.btn-more {
+    width: auto;
+    height: auto;
+    padding: 20px;
+    background: #238ead;
+    border-radius:9px;
+    color:white;
+    line-height:80px;
+}
+    .btn-more:hover {
+        color: #094677;
+        text-decoration:none;
+        Background: #30a1e5;
+    }
