--- a/XProject/Views/Home/Index.cshtml
+++ b/XProject/Views/Home/Index.cshtml
@@ -2,7 +2,22 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="row">
+    <div class="col-md-6">
+        <div class="text-box">
+            <h3>  أكس بروجكت</h3>
+            <p>
+               منصة تجمع بين الباحثين عن مدرب لتعليم القيادة والمدربين 
+            </p>
+
+        </div>
+    </div>
+
+    <div class="col-md-6">
+        <div class="img-box">
+            <img src="~/images/car03.jpg" />
+            
+        </div>
+    </div>
 </div>
+
