--- a/XProject/Views/Coach/MyProfile.cshtml
+++ b/XProject/Views/Coach/MyProfile.cshtml
@@ -1,35 +1,20 @@
 ﻿@model ApplactionUsers
-@{
-    ViewData["Title"] = "MyProfile";
-}
+@{ ViewData["Title"] = "MyProfile"; }
 
-
+@foreach (var item in @ViewBag.InfoCoach)
+{
 <section class="section-myProfile">
     <div class="row">
 
         <div class="col-md-4">
-            <div class="Item-ment">
-                <ul>
-                    <li><a asp-controller="Coach" asp-action="dashboard"><i class="fas fa-home"></i>  الرئيسية</a></li>
-                    <li><a asp-controller="Coach" asp-action="MyProfile"> <i class="fas fa-id-badge"></i> ملفي</a></li>
-                    <li><a href="#"> <i class="fas fa-receipt"></i> الطلبات </a></li>
-                    <li>
-                        <a href="#">
-                            <i class="fas fa-user-cog"></i> الإعدادات
-                        </a>
-                    </li>
-                </ul>
-            </div>
-            <div class="ads-box">
-                <div class="insaid-text"> ADS </div>
-            </div>
+            <partial name="~/Views/Shared/_RightMenuCoachPartial.cshtml" />
         </div>
 
         <div class="col-md-8">
 
             <div class="form-group">
                 <label> رقم الهوية</label>
-                <input readonly value="" class="form-control" />
+                <input readonly value="@item.nationalId" class="form-control" />
             </div>
 
             <div class="form-group">
@@ -39,7 +24,7 @@
 
             <div class="form-group">
                 <label> رقم الهوية</label>
-                <input asp-for="Email" class="form-control" />
+                <input value="@item.Email" class="form-control" />
             </div>
 
             <div class="form-group">
@@ -53,7 +38,7 @@
                     <option value="6">6</option>
                 </select>
             </div>
-            <br /> 
+            <br />
             <div class="form-group">
                 <div class="box-days">
                     <label> الايام المناسبة لك </label>
@@ -89,23 +74,12 @@
                 </div>
             </div>
 
-            
-
-            <br /> <br /> 
-            <div class="form-group">
-                <label> كلمة المرور </label>
-                <input asp-for="Password" type="password" class="form-control" />
-            </div>
+            <br /> <br />
 
             <div class="form-group">
-                <label> تأكيد كلمة المرور </label>
-                <input asp-for="Confirmpassword" type="password" class="form-control" />
-            </div>
-
-
-            <div class="form-group">
-                <input type="submit" value=" حفــظ"  class="btn btn-color coolor-White"/>
+                <input type="submit" value=" حفــظ" class="btn btn-color coolor-White" />
             </div>
         </div>
     </div>
 </section>
+}
