--- a/XProject/Views/Trainee/dashboard.cshtml
+++ b/XProject/Views/Trainee/dashboard.cshtml
@@ -3,5 +3,12 @@
     ViewData["Title"] = "dashboard";
 }
 
-<h1>dashboard</h1>
+<div class="row">
+    <div class="col-md-3">
+        <partial name="~/Views/Shared/User/_RightMenuUserPartial.cshtml" />
+    </div><!-- col-md-3 -->
 
+    <div class="col-md-9">
+        <partial name="~/Views/Shared/User/_StatisticUserPartial.cshtml" />
+    </div> <!-- col-md-9 -->
+</div> <!-- row -->
