--- a/XProject/Views/Home/register.cshtml
+++ b/XProject/Views/Home/register.cshtml
@@ -23,7 +23,7 @@
             <i class="fas fa-id-card"></i>
             رقم الهوية
         </label>
-        <input asp-for="nationalId" class="form-control" placeholder="national Id" required />
+        <input asp-for="nationalId"  class="form-control" placeholder="national Id" required />
     </div>
 
 
@@ -32,7 +32,7 @@
             <i class="far fa-envelope"></i>
             البريد الإلكتروني
         </label>
-        <input asp-for="Email" class="form-control" placeholder="Email" required/>
+        <input asp-for="Email" type="email" class="form-control" placeholder="Email" required/>
     </div>
 
     <div class="form-group">
