--- a/XProject/Views/Shared/_FristPageLayout.cshtml
+++ b/XProject/Views/Shared/_FristPageLayout.cshtml
@@ -68,5 +68,26 @@
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @RenderSection("Scripts", required: false)
+
+<script type="text/javascript">
+    //var password = document.getElementById("password")
+    //    , confirm_password = document.getElementById("confirm_password");
+
+    //function validatePassword()
+    //{
+    //    if (password.value != confirm_password.value)
+    //    {
+    //        alert("Not matttch");
+    //        //confirm_password.setCustomValidity("Passwords Don't Match");
+    //    } else
+    //    {
+    //        confirm_password.setCustomValidity('');
+    //    }
+    //}
+
+    //password.onchange = validatePassword;
+    //confirm_password.onkeyup = validatePassword;
+
+</script>
 </body>
 </html>
