--- a/XProject/Views/Shared/_Layout.cshtml
+++ b/XProject/Views/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">طلبات التدريب </a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="AllRequests">طلبات التدريب </a>
                         </li>
 
                         @if (@ViewBag.NID != null)
