--- a/XProject/Views/Trainee/MyRequests.cshtml
+++ b/XProject/Views/Trainee/MyRequests.cshtml
@@ -49,7 +49,7 @@
                                         <label> @item.Price</label> <span> ريال </span>
                                     </div>
                                     <div class="col-md-2">
-                                        <a class="btn-more" asp-controller="" asp-action=""> التفاصيل </a>
+                                        <a class="btn-more" asp-controller="Trainee" asp-action="Details" asp-route-id="@item.Id"> التفاصيل </a>
                                     </div>
                                 </div> <!-- Row -->
                             </div> <!-- box -->
