--- a/XProject/Views/Trainee/MyProfile.cshtml
+++ b/XProject/Views/Trainee/MyProfile.cshtml
@@ -15,28 +15,28 @@
 
             <div class="form-group">
                 <label> رقم الهوية</label>
-                <input readonly value="" class="form-control" />
+                <input readonly value="@ViewBag.Info.nationalId" class="form-control" />
             </div>
 
             <form method="post">
 
 
                 <div class="form-group">
-                    <label>  ....... </label>
-                   
+                    <label>  الاســــم </label>
+                    <p> @ViewBag.Info.Name</p>
                 </div>
                 <br />
                 <div class="form-group">
                     <div class="box-days">
-                        <label> ....... </label>
-                        
+                        <label> البريد الإلكتروني </label>
+                        <p> @ViewBag.Info.Email</p>
                     </div>
                 </div>
 
                
 
                 <div class="form-group">
-                    <input type="submit" value=" حفــظ" class="btn btn-color coolor-White" />
+                    @*K<input type="submit" value=" حفــظ" class="btn btn-color coolor-White" />*@
                 </div>
             </form>
         </div>
