--- a/XProject/wwwroot/css/site.css
+++ b/XProject/wwwroot/css/site.css
@@ -296,3 +296,28 @@ button.close {
     color:white;
     text-decoration-style:none;
 }
+
+.Detils-offer{
+    width:100%;
+    height:auto;
+    min-height:300px;
+    border:1px solid #e5e5e5;
+    /*background:rgba(0, 0, 0, .05);*/
+    padding:15px;
+    border-radius:9px;
+}
+.header-detils{
+    border-bottom:2px solid rgba(0, 0, 0, .05);
+    height:50px;
+    width:100%;
+    padding:15px;
+}
+.body-offer{
+    padding:15px;
+}
+.Req-New-offer {
+    width: 100%;
+    height: 40px;
+    margin-bottom: 20px;
+    padding: 15px;
+}
